welcome.lessons.welcome.variables.Variables.scala.error
Variables:9: error: not found: value dejaFait
while (nbPas!=dejaFait){
              ^Variables:11: error: not found: value dejafait
	dejafait=dejaFait+1 ;
        ^